# llvm-leech-demo

./: README.md  infected_target.c  leech_build_guide.md  leech_payload.c
.github/workflows/: leech_ci.yml
src/: CMakeLists.txt  inject_payload_pass.cpp  leech_payload.c  leech_summary.txt
